fix: overflow scroll

--- a/components/navigation/navigation.css
+++ b/components/navigation/navigation.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 0.5rem 2rem 0.5rem;
   max-width: 100%;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 
 .nav-links {
